=== master

* Move most Sequel singleton methods into a module that extends Sequel for easier overriding (jeremyevans)

* Fix method visibility issues in model, plugin, extension, and adapter code (jeremyevans)

* Avoid defining conversion procs for PostgreSQL inet/cidr types in pg_inet extension when using sequel_pg 1.13.0+ (jeremyevans)

* Add run_transaction_hooks Database extension, allowing for running the transaction hooks before commit/rollback, for use with transactional testing (jeremyevans)

* Recognize timestamp(N) with time zone type (isc) (#1684)

=== 5.31.0 (2020-04-01)

* Fix alter_table drop_constraint :primary_key option on SQLite for non-integer primary keys (jeremyevans)

* Add skip_saving_columns plugin, which supports columns to skip when saving, and skips generated columns by default (joeosburn, jeremyevans) (#1681, #1682)

* Add support for creating partitioned tables in PostgreSQL 10+ using :partition_by and :partition_of options (jeremyevans)

* Dump generated columns as generated columns when using the schema_dumper with :same_db option on PostgreSQL 12+ (jeremyevans) (#1680)

* Ignore defaults for generated columns by default when using the schema dumper (jeremyevans) (#1680)

* Include generated columns in schema on SQLite 3.31+ (jeremyevans)

* Add :generated schema entry on PostgreSQL 12+ and SQLite 3.31+ for whether the columns is generated (jeremyevans)

* Add association_lazy_eager_option plugin for supporting :eager option for association method (jeremyevans)

* Add forbid_lazy_load plugin for forbidding lazy loading of associations, to help find N+1 issues (jeremyevans)

=== 5.30.0 (2020-03-01)

* Remove specs and old release notes from the gem to reduce gem size by over 40% (jeremyevans)

* When using Database#transaction :retry_on, call :before_retry option if retrying even if :num_retries is nil (jcmfernandes) (#1678)
