@@ -1,5 +1,7 @@
 === master
 
+* Add fiber_concurrency extension, for using Fiber.current instead of Thread.current for checking out connections (jeremyevans)
+
 * Move most Sequel singleton methods into a module that extends Sequel for easier overriding (jeremyevans)
 
 * Fix method visibility issues in model, plugin, extension, and adapter code (jeremyevans)
